wrapping the app from the session provider

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=""
 RESEND_API_KEY=""
 RESEND_API_KEY_SECRET=re_5nYV3kiR_4RVxDzw2GtQXp75XtGBQnA4d
-NEXTAUTH_SECRET=""
+NEXTAUTH_SECRET=fsdjsldfjsldhj473yrsFdsjfhs23
