completing the backend-part

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.21",
+    "ai": "^3.2.32",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "next-auth": "^4.24.5",
+    "openai": "^4.52.7",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.5",
